# learn-infra

./: README.md  run.sh
backend/: fake.py  pyproject.toml
backend/fake/: main.py  pyproject.toml
benchmark/: .gitignore  bench_qwen.py  bench_simple.py  client.py  pyproject.toml
frontend/: README.md  main.py  pyproject.toml
frontend/frontend/message/: backend.py  frontend.py  tokenizer.py
frontend/frontend/server/: __init__.py  api_server.py  args.py  launch.py
frontend/frontend/tokenizer/: detokenize.py  server.py  tokenize.py
frontend/frontend/utils/: __init__.py  hf.py  logger.py  mp.py
