[project]
name = "learn-infra-frontend"
version = "0.1.0"
description = "Frontend service (HTTP API + tokenizer/detokenizer) for learn-infra. Talks to the GPU backend over ZMQ."
readme = "README.md"
license = { file = "../LICENSE" }
authors = [
    { name = "Zhou Chang", email = "achang.zhou@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "msgpack",
    "pyzmq",
    "torch==2.12.1+cu126",
    "transformers>=4.56.0,<=4.57.3",
    "uvicorn",
    "fastapi",
    "pydantic",
    "prompt_toolkit",
    "psutil",
]

[project.scripts]
learn-infra-frontend = "frontend.server.launch:launch_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frontend"]

# torch CUDA wheels (the +cu126 local-version builds) are not on PyPI;
# pull them from the official PyTorch index. `explicit = true` keeps this
# index from being consulted for any other package.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
